# eadags

./: main.py  pyproject.toml
data/: dag.txt
eadags/: dag.py  generate.py  power.py
eadags/algo/: __init__.py  federated.py
tmp/: arg  run.sh
