[project]
name = "eadags"
version = "0.1.0"
description = "Personal codebase for research in Energy Aware DAG Scheduling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.0",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
